force-app/main/default/objects/QTB_Tax_Detail__c/QTB_Tax_Detail__c.object-meta.xml
<CustomObject>
    <description>Contain detail tax records for the invoice line item. Invoice Line Tax amount is the sum of all taxes. These records are meant to capture the individual tax amount.</description>
    <label>Tax Detail</label>
    <nameField>
        <displayFormat>TAX-{0000000000}</displayFormat>
        <label>Tax Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>