force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_CalculatedTax__c.field-meta.xml
<CustomField>
    <fullName>QTB_CalculatedTax__c</fullName>
    <label>Calculated Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>