force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>QTB_Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note</label>
    <referenceTo>blng__CreditNote__c</referenceTo>
    <relationshipLabel>Tax Details</relationshipLabel>
    <relationshipName>Tax_Details</relationshipName>
    <type>Lookup</type>
</CustomField>