force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Credit_Note_Line__c.field-meta.xml
<CustomField>
    <fullName>QTB_Credit_Note_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note Line</label>
    <referenceTo>blng__CreditNoteLine__c</referenceTo>
    <relationshipLabel>Tax Details</relationshipLabel>
    <relationshipName>Tax_Details</relationshipName>
    <type>Lookup</type>
</CustomField>