force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_EffectiveRate__c.field-meta.xml
<CustomField>
    <fullName>QTB_EffectiveRate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Effective Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>