force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Imposition__c.field-meta.xml
<CustomField>
    <fullName>QTB_Imposition__c</fullName>
    <label>Imposition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>