force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_ImpositionId__c.field-meta.xml
<CustomField>
    <fullName>QTB_ImpositionId__c</fullName>
    <label>Imposition Id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>