force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_ImpositionType__c.field-meta.xml
<CustomField>
    <fullName>QTB_ImpositionType__c</fullName>
    <label>Imposition Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>