force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Individual_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>QTB_Individual_Tax_Amount__c</fullName>
    <description>#QTB Tax Detail, Shows Individual Tax amount for each Tax Rate applied on an Invoice Line.</description>
    <label>Individual Tax Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>