force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>QTB_Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#Invoice Line for which Tax Detail Record is created.</description>
    <label>Invoice Line</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>Tax Details</relationshipLabel>
    <relationshipName>Tax_Details</relationshipName>
    <type>Lookup</type>
</CustomField>