force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Invoice_Line_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>QTB_Invoice_Line_Subtotal__c</fullName>
    <description>#QTB-Subtotal for the Invoice Line.</description>
    <label>Invoice Line Subtotal</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>