force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Invoice_Print_Tax_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Invoice_Print_Tax_Name__c</fullName>
    <formula>QTB_Print_Tax_Detail__c</formula>
    <label>Invoice Print Tax Name</label>
    <type>Text</type>
</CustomField>