force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>QTB_Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>