force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_JurisdictionLevel__c.field-meta.xml
<CustomField>
    <fullName>QTB_JurisdictionLevel__c</fullName>
    <label>Jurisdiction Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>