force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Legal_Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity_Country__c</fullName>
    <description>#34408</description>
    <formula>IF(NOT(ISBLANK(QTB_Sub_Invoice_Line__c)), 
	IF( ISPICKVAL(QTB_Sub_Invoice_Line__r.blng__InvoiceLine__r.blng__Invoice__r.blng__Account__r.QTB_Legal_Entity_Country__c, &apos;Turkey&apos;) ,&apos;Turkey&apos;, null),
	IF(ISBLANK(QTB_Invoice__c),
			IF( ISPICKVAL(QTB_Invoice_Line__r.blng__Invoice__r.blng__Account__r.QTB_Legal_Entity_Country__c , &apos;Turkey&apos;) ,&apos;Turkey&apos;,null),
			IF(ISPICKVAL(QTB_Invoice__r.blng__Account__r.QTB_Legal_Entity_Country__c  , &apos;Turkey&apos;) ,&apos;Turkey&apos;, null)
)
)</formula>
    <label>Legal Entity Country</label>
    <type>Text</type>
</CustomField>