force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Standard_Tax_Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>QTB_Standard_Tax_Override_Amount__c</fullName>
    <description>#34408</description>
    <label>Standard Tax Override Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>