force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Sub_Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>QTB_Sub_Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#31609 : To Create tax details at the subline level</description>
    <label>Sub Invoice Line</label>
    <referenceTo>blng__SubInvoiceLine__c</referenceTo>
    <relationshipLabel>Tax Details</relationshipLabel>
    <relationshipName>Tax_Details</relationshipName>
    <type>Lookup</type>
</CustomField>