force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Tax_Applicability__c.field-meta.xml
<CustomField>
    <fullName>QTB_Tax_Applicability__c</fullName>
    <label>Tax Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Product Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>