force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Tax_Code__c</fullName>
    <description>#QTB-TAX_CODE</description>
    <label>Tax Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>