force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Tax_Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>QTB_Tax_Override_Amount__c</fullName>
    <label>Tax Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>