force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Tax_Override_Amt_Local__c.field-meta.xml
<CustomField>
    <fullName>QTB_Tax_Override_Amt_Local__c</fullName>
    <description>#26654 created as part of Exchange rate</description>
    <formula>IF(QTB_Invoice_Line__c != Null, QTB_Invoice_Line__r.QTB_Total_Amt_Tax_Override_local__c,
IF(QTB_Credit_Note_Line__c != Null,QTB_Credit_Note_Line__r.QTB_Tax_Override_Amt_Local__c,
IF(QTB_Invoice__c != Null,  QTB_Invoice__r.QTB_Tax_Override_Amt_Local__c,
QTB_Credit_Note__r.QTB_Tax_Override_Amt_Local__c
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Override Amount (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>