force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_TaxDisplay__c.field-meta.xml
<CustomField>
    <fullName>QTB_TaxDisplay__c</fullName>
    <description>#QTB-to store tax description for particular tax rate</description>
    <label>Tax Display</label>
    <length>30</length>
    <type>Text</type>
</CustomField>