force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_TaxRateId__c.field-meta.xml
<CustomField>
    <fullName>QTB_TaxRateId__c</fullName>
    <description>#QTB- to store particular tax Id</description>
    <label>Tax Rate Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>