force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_TaxType__c.field-meta.xml
<CustomField>
    <fullName>QTB_TaxType__c</fullName>
    <label>Tax Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>