force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Usage__c.field-meta.xml
<CustomField>
    <fullName>QTB_Usage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage</label>
    <referenceTo>blng__Usage__c</referenceTo>
    <relationshipLabel>Tax Details</relationshipLabel>
    <relationshipName>Tax_Details</relationshipName>
    <type>Lookup</type>
</CustomField>