force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Withholding_Tax__c.field-meta.xml
<CustomField>
    <fullName>QTB_Withholding_Tax__c</fullName>
    <description>Gitlab #31117 As part of Turkey WHT Scenario</description>
    <label>Withhold</label>
    <length>5</length>
    <type>Text</type>
</CustomField>