force-app/main/default/objects/QTB_Tax_Detail__c/fields/QTB_Withholding_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>QTB_Withholding_Tax_Rate__c</fullName>
    <description>Gitlab #31117 As part of Turkey WHT Scenario</description>
    <label>Withholding Tax Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>